# Demand-Forecasting-for-KPCL-spare-parts

./: .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.py  out.txt  package-lock.json  pyproject.toml  requirements.txt  run_pipeline.ps1  start.ps1
data/processed/all_forecast/: 082.08.000.50._final_forecast.csv  085.00.003.50._final_forecast.csv  336.40.401.50._final_forecast.csv
data/processed/all_validation/: 082.03.110.50._AR_forecast_vs_actual_12w.csv  082.08.000.50._Prophet_forecast_vs_actual_12w.csv  336.40.401.50._AR_forecast_vs_actual_12w.csv  993.00.311.00._AR_forecast_vs_actual_12w.csv  validation_summary_metrics.csv
data/processed/autosarima_forecast/: 082.04.030.50._forecast.csv  336.40.401.50._forecast.csv
data/processed/autosarima_validation/: 336.40.401.50._validation_vs_actual.csv
data/processed/classic_ml_forecast/: 082.04.030.50._forecast_classic.csv  336.40.401.50._forecast_classic.csv  993.00.311.00._forecast_classic.csv
data/processed/data_preparation/: test_dataset.csv  (+1 more)
src/: __init__.py  generate_datastore.py  webapp_assets_sync.py
src/api/: backup_main.py  deprecated_app.py  main.py
src/data/: data_preparation.py
src/forecast_validation/: validate_all_models.py  validate_autosarima_model.py  validate_classic_ml.py
src/modeling/: compare_classic_ml_rmse.py  compare_models_rmse.py  train_forecast_all_models.py  train_forecast_autosarima.py  train_forecast_classic_ml.py
src/visualization/: dashboard.py  debug_data.py  mstl_analysis.py
src/webapp/: index.html  package-lock.json  package.json  tailwind.config.js
(+99 files in other folders)
