[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kpcl_selected_item_forecasting"
version = "0.0.1"
description = "specific item code forecasting given by kpcl"
authors = [
  { name = "adeeba" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["kpcl_selected_item_forecasting"]
include = ["pyproject.toml", "kpcl_selected_item_forecasting/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["kpcl_selected_item_forecasting"]
force-sort-within-sections = true

